# tvm-runtime-rs

./: .gitmodules  Cargo.toml  tvm-ffi  tvm-ffi-macros  tvm-ffi-sys
scripts/: setup-tvm.sh
tvm-ffi-sys/: Cargo.toml
tvm-runtime/: Cargo.toml
tvm-runtime-sys/: Cargo.toml  build.rs
tvm-runtime-sys/src/: lib.rs
tvm-runtime/src/: lib.rs  rtensor.rs  tensor.rs  tensor_cache.rs
