# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "tvm-runtime"
description = "tvm-runtime rust support"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/brekkylab/tvm-runtime-rs"

[lib]
name = "tvm_runtime"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tvm-ffi = { path = "../3rdparty/tvm/3rdparty/tvm-ffi/rust/tvm-ffi" }
tvm-ffi-sys = { path = "../3rdparty/tvm/3rdparty/tvm-ffi/rust/tvm-ffi-sys" }
tvm-runtime-sys = { path = "../tvm-runtime-sys" }

[features]
default = []
cuda = ["tvm-runtime-sys/cuda"]
metal = ["tvm-runtime-sys/metal"]
vulkan = ["tvm-runtime-sys/vulkan"]
